--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <title>
-            hi!
+            David Youm
         </title>
 
         <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
