--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="/davidyoum.github.io/styles/style_contact.css"/>
+        <link rel="stylesheet" href="/davidyoum.github.io/style_contact.css"/>
     </head>
 
     <header>
