--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="/davidyoum.github.io/style_index.css"/>
+        <link rel="stylesheet" href="davidyoum.github.io/styles/style_work"/>
     </head>
     
     <header>
@@ -28,10 +28,10 @@
     <body>
         <div id="body">
             <div id="links">
-                <a href="/davidyoum.github.io/index.html">Home</a>  &nbsp;
-                <a href="/davidyoum.github.io/html/work.html">Work</a>  &nbsp;
-                <a href="/davidyoum.github.io/html/aboutme.html">About Me</a>  &nbsp;
-                <a href="/davidyoum.github.io/html/contact.html">Contact</a>
+                <a href="davidyoum.github.io/index.html">Home</a>  &nbsp;
+                <a href="davidyoum.github.io/work.html">Work</a>  &nbsp;
+                <a href="davidyoum.github.io/aboutme.html">About Me</a>  &nbsp;
+                <a href="davidyoum.github.io/contact.html">Contact</a>
             </div>
 
             <p>
