--- a/contact.html
+++ b/contact.html
@@ -28,10 +28,10 @@
     <body>
         <dev id=#body>
             <div id="links">
-                <a href="davidyoum.github.io/index.html">Home</a>  &nbsp;
-                <a href="davidyoum.github.io/work.html">Work</a>  &nbsp;
-                <a href="davidyoum.github.io/aboutme.html">About Me</a>  &nbsp;
-                <a href="davidyoum.github.io/contact.html">Contact</a>
+                <a href="index.html">Home</a>  &nbsp;
+                <a href="work.html">Work</a>  &nbsp;
+                <a href="aboutme.html">About Me</a>  &nbsp;
+                <a href="contact.html">Contact</a>
             </div>
 
             <p>
