--- a/contact.html
+++ b/contact.html
@@ -11,48 +11,51 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@600&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="styles/style_index.css"/>
     </head>
 
-    <header>
-        <div class="header">
-            <div id="title">
-                <p>
-                    <b> David Youm </b> 
-                </p>
-            </div>
-
-        </div>
-    </header>
-
     <body>
-        <dev id=#body>
-            <div id="links">
-                <a href="index.html">Home</a>  &nbsp;
-                <a href="work.html">Work</a>  &nbsp;
-                <a href="aboutme.html">About Me</a>  &nbsp;
-                <a href="contact.html">Contact</a>
-            </div>
+        <div id="container">
+            <div id="main">
+                <header id="header">
+                    <div id="title_name" style="font-family: 'Inter', sans-serif;">
+                        <p><a href="index.html"> <img src="https://im7.ezgif.com/tmp/ezgif-7-8c7ced38e7.gif" style="width: 200px;" > </a></p>
+                    </div>
 
-            <p>
-                d
-            </p>
-        </dev>
-    </body>
+                    <div id="navigation" style="font-family: 'Roboto', sans-serif;">
+                        <p>
+                            <b>
+                                <a href="work.html">Work</a>  &nbsp;
+                                <a href="aboutme.html">About Me</a>  &nbsp;
+                                <a href="contact.html">Contact</a> 
+                            </b>
+                        </p>
+                    </div>
+                </header>
 
-    <footer>
-        <div id="footer">
-            <div id="name">
-                <p style="text-align: center;"> David Youm <br> <script>document.write(new Date().getFullYear())</script> </p>
+
+                <div id="body">
+                    <div id="bod">
+                        
+                    </div>
+                </div>
             </div>
+        </div> 
+
+        <footer id="footer">
+            <div id="footer_name">
+                <p>David Youm &copy; <script> document.write(new Date().getFullYear())</script></p>
+            </div>    
             
-            <div id="socials">
+
+            <div id="social">
                 <a href="https://www.linkedin.com/in/davidyoum/"> LinkedIn </a>
                 <br>
                 <a href="https://github.com/"> GitHub </a> 
                 <br>
-                <a href="https://www.instagram.com/davidyoum_/"> Instagram </a>  
+                <a href="https://www.instagram.com/davidyoum_/"> Instagram </a>
             </div>
-        </div>    
-    </footer>
-</html> 
+        </footer>  
+    </body>
+</html>
