--- a/work.html
+++ b/work.html
@@ -12,7 +12,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@600&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="styles/style_index.css"/>
+        <link rel="stylesheet" href="styles/style_work.css"/>
     </head>
 
     <body>
