--- a/aboutme.html
+++ b/aboutme.html
@@ -20,7 +20,7 @@
             <div id="main">
                 <header id="header">
                     <div id="title_name" style="font-family: 'Inter', sans-serif;">
-                        <p><a href="index.html"> <img src="https://im7.ezgif.com/tmp/ezgif-7-8c7ced38e7.gif" style="width: 200px;" > </a></p>
+                        <p><a href="index.html"> <img src="https://media2.giphy.com/media/eJUjbQXeZ3Rw3uCWn8/giphy.gif" style="width: 200px;" > </a></p>
                     </div>
 
                     <div id="navigation" style="font-family: 'Roboto', sans-serif;">
@@ -36,8 +36,40 @@
 
 
                 <div id="body">
-                    <div id="bod">
+                    <div id="title">
+                        <h1>About Me</h1>
+                    </div>
+
+                    <div id="paragraph">
+                        <p> Hello, my name is David Youm. I'm a senior in High School currently trying to pursue a career in Computer Science and Software Development.</p>
+                        <br>
+                        <p> I'm 17 and just recently fell in love with programming. I started taking Computer Programming classes in junior year and kept expanding my knowledge on Computer Science 
+                            and Programming. I love teaching people things that I learn so thats why I love teaching in my classes and also on YouTube.</p>
+                        <br>
+                        <p> Languages I Know:</p>
+                        <br>
+                        <p> 
+                            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/cplusplus/cplusplus-original.svg" style="width: 70px;"/>
+                            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" style="width: 70px;"/>
+                            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original.svg" style="width: 70px;"/>
+                            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/ocaml/ocaml-original.svg" style="width: 70px;"/>
+                            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" style="width: 70px;"/>
+                            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" style="width: 70px;"/>
+                        </p>
+                        <br>
+                    </div>
+
+                    <div id="picture">
                         
+                        <h1>David Youm</h1>
+                        <br>
+                        <img src="https://i.ibb.co/CKKVsvL/1640373445662.jpg" style="width: 400px;">
+                    </div>
+
+                    <div id="bottom">
+                        <h1>TEST</h1>
+                    </div>
+
                     </div>
                 </div>
             </div>
