--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div id="main">
                 <header id="header">
                     <div id="title_name" style="font-family: 'Inter', sans-serif;">
-                        <p><a href="index.html"> <img src="https://im7.ezgif.com/tmp/ezgif-7-8c7ced38e7.gif" style="width: 200px;" > </a></p>
+                        <p><a href="index.html"> <img src="https://media2.giphy.com/media/eJUjbQXeZ3Rw3uCWn8/giphy.gif" style="width: 200px;" > </a></p>
                     </div>
 
                     <div id="navigation" style="font-family: 'Roboto', sans-serif;">
