--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div id="main">
                 <header id="header">
                     <div id="title_name" style="font-family: 'Inter', sans-serif;">
-                        <p><a href="index.html"> <img src="https://media2.giphy.com/media/eJUjbQXeZ3Rw3uCWn8/giphy.gif" style="width: 200px;" > </a></p>
+                        <p><a href="index.html"> David Youm </a></p>
                     </div>
 
                     <div id="navigation" style="font-family: 'Roboto', sans-serif;">
@@ -36,7 +36,7 @@
 
 
                 <div id="body">
-                    <div id="bod">
+                    <div id="paragraph">
                         <br>
                         <br>
                         <br>
@@ -57,15 +57,15 @@
         <footer id="footer">
             <div id="footer_name">
                 <p>David Youm &copy; <script> document.write(new Date().getFullYear())</script></p>
-            </div>    
+            </div>
             
 
             <div id="social">
-                <a href="https://www.linkedin.com/in/davidyoum/"> LinkedIn </a>
+                <a href="https://www.linkedin.com/in/davidyoum/" target="_blank"> LinkedIn </a>
                 <br>
-                <a href="https://github.com/"> GitHub </a> 
+                <a href="https://github.com/davidyoum" target="_blank"> GitHub </a> 
                 <br>
-                <a href="https://www.instagram.com/davidyoum_/"> Instagram </a>
+                <a href="https://www.instagram.com/davidyoum_/" target="_blank"> Instagram </a>
             </div>
         </footer>  
     </body>
