--- a/aboutme.html
+++ b/aboutme.html
@@ -19,8 +19,8 @@
         <div id="container">
             <div id="main">
                 <header id="header">
-                    <div id="title_name" style="font-family: 'Inter', sans-serif;">
-                        <p><a href="index.html"> <img src="https://media2.giphy.com/media/eJUjbQXeZ3Rw3uCWn8/giphy.gif" style="width: 200px;" > </a></p>
+                    <div id="title_name">
+                        <p><a href="index.html"> David Youm </a></p>
                     </div>
 
                     <div id="navigation" style="font-family: 'Roboto', sans-serif;">
@@ -60,7 +60,6 @@
                     </div>
 
                     <div id="picture">
-                        
                         <h1>David Youm</h1>
                         <br>
                         <img src="https://i.ibb.co/CKKVsvL/1640373445662.jpg" style="width: 400px;">
@@ -82,11 +81,11 @@
             
 
             <div id="social">
-                <a href="https://www.linkedin.com/in/davidyoum/"> LinkedIn </a>
+                <a href="https://www.linkedin.com/in/davidyoum/" target="_blank"> LinkedIn </a>
                 <br>
-                <a href="https://github.com/"> GitHub </a> 
+                <a href="https://github.com/davidyoum" target="_blank"> GitHub </a> 
                 <br>
-                <a href="https://www.instagram.com/davidyoum_/"> Instagram </a>
+                <a href="https://www.instagram.com/davidyoum_/" target="_blank"> Instagram </a>
             </div>
         </footer>  
     </body>
