--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
             <div id="main">
                 <header id="header">
                     <div id="title_name" style="font-family: 'Inter', sans-serif;">
-                        <p><a href="index.html"> <img src="https://media2.giphy.com/media/eJUjbQXeZ3Rw3uCWn8/giphy.gif" style="width: 200px;" > </a></p>
+                        <p><a href="index.html"> David Youm </a></p>
                     </div>
 
                     <div id="navigation" style="font-family: 'Roboto', sans-serif;">
@@ -36,8 +36,15 @@
 
 
                 <div id="body">
-                    <div id="bod">
-                        
+                    <div id="title">
+                        <h1>Contact</h1>
+                    </div>
+
+                    <div id="paragraph">
+                        <br><a href="mailto:dyoum2004@gmail.com" target="_blank"> E-Mail </a> <br><br>
+                        <a href="https://www.linkedin.com/in/davidyoum/" target="_blank"> LinkedIn </a> <br><br>
+                        <a href="https://github.com/davidyoum" target="_blank"> GitHub </a> <br><br>
+                        <a href="https://www.instagram.com/davidyoum_/" target="_blank"> Instagram </a>
                     </div>
                 </div>
             </div>
@@ -50,11 +57,11 @@
             
 
             <div id="social">
-                <a href="https://www.linkedin.com/in/davidyoum/"> LinkedIn </a>
+                <a href="https://www.linkedin.com/in/davidyoum/" target="_blank"> LinkedIn </a>
                 <br>
-                <a href="https://github.com/"> GitHub </a> 
+                <a href="https://github.com/davidyoum" target="_blank"> GitHub </a> 
                 <br>
-                <a href="https://www.instagram.com/davidyoum_/"> Instagram </a>
+                <a href="https://www.instagram.com/davidyoum_/" target="_blank"> Instagram </a>
             </div>
         </footer>  
     </body>
