--- a/work.html
+++ b/work.html
@@ -37,7 +37,7 @@
 
                 <div class="body">
                     <div id="title">
-                        <h1>Contact</h1>
+                        <h1>Work</h1>
                     </div>
                 </div>
                 
